--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "mocha"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +18,15 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "chai": "^4.3.7",
+    "chai-http": "^4.4.0",
+    "cors": "^2.8.5",
+    "import-local": "^3.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.1",
+    "mongoose-timestamp": "^0.6.0",
     "rxjs": "~7.8.0",
+    "supertest": "^6.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
@@ -27,12 +35,15 @@
     "@angular/cli": "~16.0.5",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "ansi-colors": "^4.1.3",
     "jasmine-core": "~4.6.0",
+    "jest": "^29.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "mocha": "^10.2.0",
     "typescript": "~5.0.2"
   }
 }
